Fix error handling, post handling in makeRequest Fix response binding in ProxyHandler Fix handling of double-encoded URLS and URLs of the form x.y.com?a=b
git-svn-id: https://svn.apache.org/repos/asf/incubator/shindig/trunk@619525 13f79535-47bb-0310-9956-ffa450edef68